# kinova_controllers

./: .gitignore  README.md
kinova_controllers/: CMakeLists.txt  README.md  package.xml
kinova_controllers/config/: config.rviz  ros_control.yaml  ros_control.yaml.old  rqt_bota.xml  rqt_bota_imu.xml  rqt_external_wrench.xml  rqt_joint_efforts.xml  rqt_joint_positions_ik_sim.xml  rqt_joint_velocities.xml  rqt_multiplot.xml  sm_test.rviz
kinova_controllers/config/rqt/: rqt_joint_efforts.xml  rqt_joint_positions_ik_sim.xml
kinova_controllers/kinova_joint_trajectory_controller/: CMakeLists.txt  package.xml  plugins.xml
kinova_controllers/kinova_joint_trajectory_controller/config/: cfg.rviz  controller.yaml
kinova_controllers/kinova_joint_trajectory_controller/launch/: debug.launch  load_controller.launch
kinova_controllers/kinova_joint_trajectory_controller/msg/: Joint.action
kinova_controllers/kinova_joint_trajectory_controller/scripts/: joint_trajectory_commander.py
kinova_controllers/kinova_joint_trajectory_controller/src/: controller.cpp  trajectory_generator.cpp  velocity_profile.cpp
kinova_controllers/kinova_joint_trajectory_controller/unittest/: generator_test.cpp
kinova_controllers/kinova_joint_velocity_controller/: package.xml  plugins.xml
kinova_controllers/kinova_joint_velocity_controller/config/: controller.yaml
kinova_controllers/kinova_joint_velocity_controller/launch/: load_controller.launch
kinova_controllers/kinova_joint_velocity_controller/src/: controller.cpp
kinova_controllers/kinova_mpc_controllers/: CMakeLists.txt  package.xml  plugins.xml
kinova_controllers/kinova_mpc_controllers/config/: ocs2_test.rviz
kinova_controllers/kinova_mpc_controllers/launch/: controller.launch  ocs2_test.launch  operator_pc.launch  ros_controller.launch
kinova_controllers/kinova_mpc_controllers/params/: common.yaml  gains.yaml  gains_sim.yaml  ros_control.yaml  task.info
kinova_controllers/kinova_mpc_controllers/src/: controllers.cpp  mpc_velocity_controller.cpp
kinova_controllers/kinova_reflex_controller/: CMakeLists.txt  package.xml  plugins.xml
kinova_controllers/kinova_reflex_controller/config/: controller.yaml
kinova_controllers/kinova_reflex_controller/launch/: load_params.launch
kinova_controllers/launch/: gazebo.launch  interactive_target.launch  load.launch  run_robot.launch  run_sim.launch  run_sim_common.launch  run_sim_valve.launch  valve_traj_gen.launch
kinova_controllers/scripts/: trajectory_generator.py
kinova_description_for_controllers/: CMakeLists.txt  package.xml
kinova_description_for_controllers/config/: config.rviz
kinova_description_for_controllers/launch/: debug.launch
kinova_description_for_controllers/urdf/: gen3.urdf.xacro  gen3_standalone.urdf.xacro  kinova.urdf.xacro  transmission.urdf.xacro
kinova_impedance_motion_controller/: CMakeLists.txt  package.xml  plugins.xml
kinova_impedance_motion_controller/include/kinova_impedance_motion_controller/: kinova_impedance_motion_controller.h
kinova_impedance_motion_controller/src/: kinova_impedance_motion_controller.cpp
kinova_missions/kinova_valve_opening/: CMakeLists.txt  README.md  package.xml  setup.py
kinova_missions/kinova_valve_opening/apriltag/: apriltag_detection.launch  apriltag_settings.yaml  config.rviz
kinova_missions/kinova_valve_opening/config/: config.rviz  mission.yaml  mission_arm_only.yaml  mission_robot.yaml  mission_sim.yaml
kinova_missions/kinova_valve_opening/launch/: components.launch  demo.launch  load_valve.launch  mission.launch  mission.launch.save  piloting_demo.launch  piloting_mock_modules.launch  robot.launch  visualize.launch
kinova_missions/kinova_valve_opening/scripts/: gripper_commander.py  mock_modules.py  piloting_demo.py
kinova_missions/kinova_valve_opening/urdf/: fake_valve.urdf.xacro
kinova_mpc_controllers/: CMakeLists.txt  package.xml  plugins.xml
kinova_mpc_controllers/config/: controllers.yaml  ocs2_test.rviz  task.info
kinova_mpc_controllers/include/kinova_mpc_controllers/: ft_sensor_utils.h  kinova_mpc_velocity_controller.h  mpc_admittance_controller.h  mpc_controller.h  mpc_velocity_controller.h
kinova_mpc_controllers/launch/: controller.launch  ros_controller.launch  ros_controller_test.launch
kinova_mpc_controllers/params/: common.yaml  task.info
kinova_mpc_controllers/src/: ft_sensor_utils.cpp  kinova_mpc_velocity_controller.cpp  mpc_admittance_controller.cpp  mpc_controller.cpp  mpc_velocity_controller.cpp
kinova_mpc_controllers/src/ros/: kinova_mpc_controllers.cpp  kinova_mpc_ros.cpp
kinova_robot/: CMakeLists.txt  package.xml
kinova_robot/config/: arm_pid.yaml  joint_limits.yaml  joint_zeros.yaml  joints.yaml  joints_detection.yaml
kinova_robot/include/kinova_robot/: command_interface.h  hardware_interface.h
kinova_robot/launch/: operator_pc.launch  robot.launch
kinova_robot/src/: command_interface.cpp  hardware_interface.cpp  kinova_robot_node.cpp
kinova_sensors/: CMakeLists.txt  package.xml
kinova_sensors/config/: config.rviz
kinova_sensors/launch/: load_zed.launch
kinova_sensors/zed/: zed_descr.urdf.xacro
kinova_sim/: CMakeLists.txt  package.xml
kinova_sim/config/: config.rviz  valve_config.rviz
kinova_sim/launch/: spawn_kortex_gazebo.launch
kinova_task_space_controller/: CMakeLists.txt  package.xml  plugin.xml  plugins.xml
kinova_task_space_controller/config/: gazebo_pid.yaml  ros_control.yaml
kinova_task_space_controller/launch/: controller_robot.launch  debug_description.launch  debug_ros_control.launch  gazebo.launch
kinova_task_space_controller/src/: task_space_controller.cpp
kinova_task_space_controller/urdf/: gen3.urdf.xacro  gen3_standalone.urdf.xacro
sensor_tools/: CMakeLists.txt  package.xml
sensor_tools/config/: force_torque_calibration.yaml  ft_calibration_kinova.yaml  rokubimini.launch  rokubimini.yaml
sensor_tools/include/sensor_tools/: ft_sensor.h  (+2 more)
sensor_tools/launch/: ft_sensor_calibration.launch  ft_sensor_standalone.launch  rokubimini.launch
sensor_tools/src/: ft_sensor.cpp  ft_sensor_node.cpp  ft_sensor_utils.cpp
(+40 files in other folders)
