<?xml version="1.0"?>
<package format="2">
    <name>kinova_description_for_controllers</name>
    <version>0.1.0</version>
    <description>Package containing custom description used by the kinova controllers</description>
    <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>