<?xml version="1.0"?>
<package format="2">
    <name>kinova_impedance_motion_controller</name>
    <version>0.1.0</version>
    <description>robot_control package</description>
    <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>robot_control_ros</depend>
    <depend>kortex_driver</depend>
    <depend>controller_interface</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>

    <export>
        <controller_interface plugin="${prefix}/plugins.xml"/>
    </export>
</package>
