<?xml version="1.0"?>
<package format="2">
    <name>kinova_robot</name>
    <version>0.1.0</version>
    <description>kinova_robot</description>
    <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>kortex_driver</depend>
    <depend>control_toolbox</depend>
    <depend>controller_interface</depend>
    <depend>hardware_interface</depend>
    <depend>angles</depend>
    <depend>eigen_conversions</depend>
</package>