<?xml version="1.0"?>
<package format="2">
    <name>kinova_sensors</name>
    <version>0.1.0</version>
    <description>Kinova sensors</description>
    <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>