<?xml version="1.0"?>
<package format="2">
    <name>kinova_sim</name>
    <version>0.1.0</version>
    <description>kinova_sim</description>
    <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>kortex_gazebo</exec_depend>
    <exec_depend>kortex_description</exec_depend>
    <exec_depend>kortex_control</exec_depend>
</package>