<?xml version="1.0"?>
<package format="2">
    <name>kinova_task_space_controller</name>
    <version>0.1.0</version>
    <description>robot_control package</description>
    <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>robot_control</depend>
    <depend>eigen</depend>
    <depend>kortex_driver</depend>
    <depend>kortex_description</depend>
    <depend>controller_interface</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>pinocchio</depend>
    <depend>realtime_tools</depend>
    <depend>interactive_markers</depend>
    <depend>visualization_msgs</depend>

    <export>
        <controller_interface plugin="${prefix}/plugins.xml"/>
    </export>
</package>

