<?xml version="1.0"?>
<package format="2">
  <name>kinova_joint_velocity_controller</name>
  <version>0.0.0</version>
  <description>The kinova_joint_velocity_controller package</description>

  <maintainer email="grizzi@ethz.ch">Giuseppe Rizzi</maintainer>

  <license>TODO</license>
  <author email="grizzi@ethz.ch">Giuseppe Rizzi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen</depend>
  <depend>kinova_robot</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>realtime_tools</depend>

  <export>
    <controller_interface plugin="${prefix}/plugins.xml"/>
  </export>

</package>
