<?xml version="1.0"?>
<package format="2">
    <name>kinova_mpc_controllers</name>
    <version>0.1.0</version>
    <description>kinova_mpc_controllers package</description>
    <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>eigen</depend>
    <depend>kinova_robot</depend>
    <depend>controller_interface</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>realtime_tools</depend>
    <depend>robot_control</depend>
    <depend>control_toolbox</depend>
    <depend>ocs2_mobile_manipulator_example</depend>
    <depend>angles</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <export>
        <controller_interface plugin="${prefix}/plugins.xml"/>
    </export>
</package>
