<?xml version="1.0"?>
<package format="2">
  <name>kinova_reflex_controller</name>
  <version>0.0.0</version>
  <description>The kinova_reflex_controller package</description>

  <maintainer email="grizzi@ethz.ch">Giuseppe Rizzi</maintainer>
  <license>TODO</license>

  <author email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>kinova_robot</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <export>
      <controller_interface plugin="${prefix}/plugins.xml"/>
  </export>
</package>
